# aidoctool

./: .gitignore  DevDiary.md  DeveloperGuide.md  DeveloperGuide_CLI.md  Makefile  Plan.md  README.md  pyproject.toml
.github/workflows/: python-tests.yml
aidoctool/: cli.py  config.py  config_loader.py  config_manager.py  debug_utils.py
aidoctool/commands/: config_command.py  debug_command.py
aidoctool/tests/: test_config_command.py  test_debug_command.py
tests/: conftest.py  test_debug_command.py
